[tool.poetry]
name = "mimesis"
version = "10.1.0"
description = "Mimesis: Fake Data Generator."
authors = ["Isaak Uchakaev <likid.geimfari@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lk-geimfari/mimesis"
repository = "https://github.com/lk-geimfari/mimesis"
documentation = "https://mimesis.name"
keywords = [
    "data",
    "datascince",
    "database",
    "dummy",
    "fake",
    "faker",
    "fixtures",
    "generate",
    "mimesis",
    "mock",
    "populate",
    "testing",
    "pandas"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]
exclude = [
    "mimesis/data/locale_template",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-mock = "^3.10"
requests = "^2.28"
mypy = "^1.1"
colorama = "^0.4.6"
pygments = "^2.13"
pytest-randomly = "^3.12"
pytz = "^2023.3"
black = "^22.10"
autoflake = "^2.0"
types-pytz = "^2023.3"
taskipy = "^1.10.1"
validators = "^0.20.0"
pytest-repeat = "^0.9.1"
memory-profiler = "^0.61.0"
Sphinx = ">=5.1.1,<8.0.0"
sphinx-copybutton = "^0.5.0"
sphinx-autodoc-typehints = "^1.19.2"
isort = "^5.12"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
matplotlib = "^3.7.2"
notebook = "^7.0.2"

[tool.poetry.plugins."pytest_randomly.random_seeder"]
mimesis = "mimesis.entrypoints:pytest_randomly_reseed"

[tool.pytest.ini_options]
testpaths = [
    "mimesis",
    "tests",
    "minifier.py",
]

[tool.mypy]
files = ["mimesis", "minifier.py"]
strict_optional = true
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true

[tool.isort]
profile = "wemake"

[tool.taskipy.tasks]
minify = "python minifier.py"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

