[tool.poetry]
name = "mimesis"
version = "16.0.0"
description = "Mimesis: Fake Data Generator."
authors = ["Isaak Uchakaev <hey@isaak.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lk-geimfari/mimesis"
repository = "https://github.com/lk-geimfari/mimesis"
documentation = "https://mimesis.name"
keywords = [
    "data",
    "datascince",
    "database",
    "dummy",
    "fake",
    "faker",
    "fixtures",
    "generate",
    "mimesis",
    "mock",
    "schema",
    "dataframe",
    "populate",
    "testing",
    "pandas",
    "polars",
    "pytest",
    "factory",
    "factory_boy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]
exclude = [
    "mimesis/datasets/locale_template",
]

[tool.poetry.dependencies]
python = "^3.10"
factory-boy = { version = "^3.3.0", optional = true }
pytest = { version = "^7.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-mock = "^3.10"
requests = "^2.28"
mypy = "^1.1"
colorama = "^0.4.6"
pygments = "^2.13"
pytest-randomly = "^3.12"
pytz = "^2023.3"
black = ">=22.10,<25.0"
autoflake = "^2.0"
types-pytz = "^2023.3"
taskipy = "^1.10.1"
validators = "^0.20.0"
pytest-repeat = "^0.9.1"
isort = "^5.12"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
Sphinx = ">=5.1.1,<8.0.0"
sphinx-copybutton = "^0.5.0"
sphinx-autodoc-typehints = "^1.19.2"
pytest-factoryboy = "^2.6.0"

[tool.poetry.extras]
pytest = ["pytest"]
factory = ["factory-boy"]

[tool.poetry.plugins."pytest_randomly.random_seeder"]
mimesis = "mimesis.entrypoints:pytest_randomly_reseed"

[tool.poetry.plugins.pytest11]
mimesis = "mimesis.plugins.pytest"

[tool.pytest.ini_options]
testpaths = [
    "mimesis",
    "tests",
    "minifier.py",
]

[tool.mypy]
exclude = ["tests", "docs"]
files = ["mimesis", "minifier.py"]
strict_optional = true
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true

[tool.isort]
profile = "wemake"

[tool.taskipy.tasks]
minify = "python minifier.py"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

